--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ margin:0;
 .topnav {
   background-color:black;
   overflow:hidden;
-  position:; 
+  position:fixe; 
 }
 .topnav a {
   float: left;
@@ -149,8 +149,9 @@ padding:0px;
   
 }
 div img{
-  height:500px;
-  padding:3%; 
+  height:570px;
+  width:460px;
+  padding:1%; 
 }
 #h2{
 		color:white;
@@ -218,11 +219,12 @@ li a:hover {
   padding:0;
 margin:0; 
 border:2px white;  
+  white-space:nowrap;
 }
 #p1{
   color:white;
 }
 #d3{
-	white-space:nowrap;
-	}
-	
+  white-space:nowrap
+}
+
